# soni

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR-002-Review-Report.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_SUCCESS.md  Makefile  README.md  README_TESTING.md  REWRITE_PLAN.md  TEST_ORGANIZATION.md  debug_loop.py  debug_loop_detailed.py  dialogue_state.db  ideas.md  ideas_architecture.md  mkdocs.yml  pyproject.toml
.cursor/rules/: 001-architecture.mdc  002-code-style.mdc  003-testing.mdc  004-dspy.mdc  005-langgraph.mdc  006-state.mdc  007-yaml-dsl.mdc  008-deployment.mdc
.github/workflows/: ci.yml
_bmad-output/planning-artifacts/: bmm-workflow-status.yaml  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
archive/docs/: index.md  milestones.md  quickstart.md
docs/: architecture.md  architecture_overview.md  development-guide.md  dsl-guide.md  index.md  milestones.md  project-overview.md  project-scan-report.json  publishing.md  quickstart.md  source-tree-analysis.md  technical-debt.md
docs/adr/: ADR-001-Soni-Framework-Architecture.md  ADR-001-Viability-Analysis.md  ADR-002-Technical-Validation-Results.md  ADR-003-Architectural-Refactoring.md
docs/analysis/: ANALISIS_ELIMINAR_DSPYNLUPROVIDER.md  ANALISIS_SOLID_SOLUCION_INTERRUPT.md  ANALISIS_SOLUCION_WARNINGS.md  ANALISIS_TESTS_FALLIDOS.md  ANALISIS_TESTS_UNITARIOS_COBERTURA.md  ANALISIS_WARNINGS_TESTS.md  BACKLOG_DESIGN_COMPLIANCE.md  CORRECTED_ANALYSIS.md  DESIGN_IMPLEMENTATION_INCONSISTENCIES.md  INFORME_REVISION_TESTS_IMPLEMENTADOS.md  METRIC_FIX_ANALYSIS.md  NLU_CURRENT_PROMPTED_SLOT_ISSUE.md  NLU_DOCUMENTATION_VALIDATION.md  OPTIMIZATION_BUGS_FIXED.md  REFACTORING_SOLID_SONIDU.md  RESUMEN_IMPLEMENTACION_FASE2_TESTS.md  WARNINGS_ANALYSIS.md
docs/api/: actions.md  cli.md  du.md  index.md  runtime.md
docs/brainstorming/: DRAFT-ADR-001-ca-framework.md  brainstorming_1.md  brainstorming_2.md  brainstorming_3.md
docs/design/: 00-quick-reference.md  01-architecture-overview.md  01-overview.md  02-architecture.md  02-state-machine.md  03-components.md  03-message-processing.md  04-graph-execution-model.md  04-state-machine.md  05-complex-conversations.md  05-message-flow.md  06-flow-diagrams.md  06-nlu-system.md  07-flow-management.md  08-langgraph-integration.md  09-dspy-optimization.md  11-commands.md  12-conversation-patterns.md  14-implementation-roadmap.md  15-current-problems-analysis.md  16-start-prefix-investigation.md  17-state-validation-approach.md  18-hybrid-slot-collection-strategy.md  19-realistic-slot-collection-strategy.md  20-consolidated-design-decisions.md  21-architecture-improvements.md  QUICK-DECISION-INDEX.md  README.md  implementation_plan_v2.md  soni_v3_vs_rasa_calm_comparison.md  soni_vs_rasa_calm_2025.md
docs/development/: code-review-checklist.md  tdd-guidelines.md
docs/explanation/: architecture.md
docs/guides/: nlu-optimization.md
docs/how-to/: index.md
docs/implementation/: 00-prerequisites.md  01-phase-1-foundation.md  04-phase-4-langgraph.md  05-phase-5-production.md  PROGRESS.md  handling-multiple-slots.md
docs/migration/: FINAL_SUMMARY.md  MIGRATION_SUMMARY.md
docs/notes/: DUMMYLM_EXPLANATION.md  IMPLEMENTATION_STATUS.md  NEXT_SESSION_PLAN.md
docs/quality/: milestone-13-review.md  verification-report.md
docs/reference/: dsl-spec.md
docs/releases/: v0.1.0-release-notes.md  v0.2.0-release-notes.md  v0.2.1-release-notes.md
docs/strategy/: Implementation-Strategy.md
docs/tasks/: backlog.md
docs/testing/: PYTEST_XDIST_BENEFITS.md  SLOW_TESTS_MARKER.md  TESTING.md  TESTS_EXPLANATION.md  TESTS_SKIPPED_ANALYSIS.md
docs/tutorials/: quickstart.md
docs/validation/: analisis-estado-codigo-hito-15.md  code-audit-report-v0.5.0.md  dialoguestate-migration-analysis.md  dialoguestate-migration-final.md  dialoguestate-migration-status.md  documentation-cleanup-report-v0.5.0.md  final-validation-report-v0.2.0.md  final-validation-report.md  flow-skipping-issue-analysis-report.md  flow-skipping-issue-analysis.md  normalization-impact-report.md  performance-report-v0.5.0.md  refactoring-analysis-v0.5.0.md  runtime-api-validation.md  runtime-validation.md  scoping-performance-report.md
examples/advanced/: README.md  branching_flow.yaml  retry_flow.yaml
examples/banking/: README.md  __init__.py  handlers.py  soni.yaml  validators.py
examples/dataset/: generate_training_dataset.py
examples/ecommerce/: __init__.py  handlers.py
examples/flight_booking/: README.md  __init__.py  handlers.py  soni.yaml  test_conversation.md  test_validators.py  validators.py
examples/hotel_booking/: __init__.py  handlers.py
examples/training/: flight_booking_examples.py
experiments/: 01_dspy_validation.py  02_langgraph_streaming.py  03_async_persistence.py
experiments/results/: async_persistence_results.json  (+6 more)
scripts/: analyze_nlu_failures.py  analyze_slot_loss.py  analyze_system_flaws.py  benchmark_e2e_v0.5.0.py  benchmark_performance.py  debug_complex_flow.py  debug_confirmation_recursion.py  debug_conversation_flow.py  debug_digression.py  debug_e2e_failure.py  debug_e2e_step2.py  debug_followup.py  debug_full_flow.py  debug_infinite_loop.py  debug_interruption.py  debug_last_response_update.py  debug_message_processing.py  debug_nlu_intent_detection.py  debug_nlu_interrupt.py  debug_response_priority.py  debug_routing_after_validate.py  debug_scenarios.py  debug_transfer_flow.py  debug_understand_node_context.py  fix_scope_tests.py  generate_baseline_optimization.py  migrate_tests.py  quick_optimize.py  test_du.py  test_du_module.py  test_last_response_real.py  test_nlu_interactive.py  validate_compilation_success.py  validate_config.py  validate_flows.py  validate_nlu_docs.py  validate_normalization_impact.py  validate_runtime.py  validate_runtime_api.py  validate_scoping_performance.py
tests/: __init__.py  conftest.py  factories.py  mocks.py
workflow/: TASK_REVIEW.md  rewrite_repo_dates.sh
(+1018 files in other folders)
