[project]
name = "soni"
version = "0.1.0"
description = "Soni Framework - Open Source Conversational AI Framework with Auto-Optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Soni Framework Contributors"}
]
keywords = ["conversational-ai", "dialogue-systems", "dspy", "langgraph", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core framework dependencies - allow patch and minor updates, prevent major breaking changes
    "dspy>=3.0.4,<4.0.0",
    "langgraph>=1.0.4,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "pydantic>=2.12.5,<3.0.0",
    # Web framework
    "fastapi>=0.122.0,<1.0.0",
    "uvicorn[standard]>=0.38.0,<1.0.0",
    # HTTP client
    "httpx>=0.28.1,<1.0.0",
    # Utilities
    "pyyaml>=6.0.3,<7.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "typer>=0.15.0,<1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "cachetools>=5.3.0,<6.0.0",
]

[project.scripts]
soni = "soni.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soni"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude directories that don't need linting
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "experiments",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear (includes some exception-related checks)
    # Note: Ruff doesn't have BLE (flake8-blind-except) yet
    # Consider using specific exception types instead of bare Exception
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    # B008 is kept active to catch bugs from function calls in default arguments
    # If you need to ignore it for a specific case, use: # noqa: B008 with explanation
]

# Relaxed rules for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B008",  # Allow function calls in default arguments (common in fixtures)
    "B006",  # Allow mutable default arguments (common in test fixtures)
    "PLR2004",  # Allow magic values (test data often uses magic numbers)
    "S101",  # Allow use of assert (tests use assert statements)
    "ARG",   # Allow unused function arguments (common in test fixtures)
    "F401",  # Allow unused imports (common for test utilities)
]
"src/soni/cli/**/*.py" = [
    "B008",  # Allow Typer Option() in function defaults (Typer pattern)
    "B904",  # Allow raise typer.Exit() without from (not a real exception)
]
"scripts/**/*.py" = [
    "B008",  # Allow function calls in default arguments
    "B006",  # Allow mutable default arguments
    "PLR2004",  # Allow magic values (scripts often use magic numbers/strings)
    "ARG",   # Allow unused function arguments
    "F401",  # Allow unused imports
    "T201",  # Allow print statements (scripts use print for output)
]

[tool.ruff.format]
# Configuración compatible con Black
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = ["dspy", "dspy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langgraph", "langgraph.*"]
ignore_missing_imports = true

# Relaxed rules for test files
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# Relaxed rules for scripts
[[tool.mypy.overrides]]
module = ["scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=soni",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/soni"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.1,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    # Code quality
    "ruff>=0.14.7,<1.0.0",
    "mypy>=1.19.0,<2.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    # Pre-commit hooks
    "pre-commit>=4.5.0,<5.0.0",
    # Utilities
    "anyio>=4.12.0,<5.0.0",
]
